# smart-socks

./: .gitignore  AGENTS.md  ARDUINO_ESP32_INSTALLATION_FAQ.md  AUDIT_GAPS_AND_FIXES.md  AUDIT_SUMMARY.md  AUDIT_VERIFICATION_SUMMARY.md  CLAUDE.md  CODE_REVIEW.md  DESIGN_ASSETS.md  INDEX.md  PLATFORMIO_SETUP.md  PROJECT_DOCUMENTATION_INDEX.md  PROJECT_REFACTOR_SUMMARY.md  PROJECT_STATUS.md  README.md  README_PYTHON_SETUP.md  SOFTWARE_INSTALLATION.md  TEACHER_FEEDBACK_JAN30.md  TROUBLESHOOTING.md  WORK_DIARY.md  platformio.ini
00_Planning/: FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_REVIEW.md  PROJECT_TIMELINE.md  Smart_Socks_Plan.docx  Work_Diary.docx
00_Planning/meetings/: 2026-01-29_team_meeting.md  smart_socks_meetings.ics
01_Design/: LED_DISPLAY_RESEARCH.md  circuit_diagram.md  circuit_diagram_v2.md  sensor_placement.md  sensor_placement_v2.md
03_Data/: README.md
04_Code/: DUAL_ESP32_QUICKSTART.md  PHONE_HOTSPOT_GUIDE.md  PIN_MAPPING.md  PLATFORMIO_SETUP.md  QUICKSTART.md  WIFI_BLE_TESTING.md  WIFI_CONFIGURATION.md
04_Code/python/: GIF_RECORDING_FIX.md  analysis_report.py  auto_validator.py  ble_client.py  calibration_visualizer.py  collector.py  config.py  create_demo_video.py  data_augmentation.py  data_preprocessing.py  data_validation.py  demo.py  dual_collector.py  feature_extraction.py  feature_importance.py  feature_utils.py  find_smartsocks.py  logging_utils.py  model_manager.py  nordic_style.py  pyproject.toml  quick_test.py  real_time_classifier.py  requirements.txt  run_full_pipeline.py  sensor_characterization.py  serial_receiver.py  setup_environment.py  test_wifi_connection.py  train_model.py  unknown_class.py  visualize_data.py
04_Code/python/tests/: TESTING_GUIDE.md  __init__.py  conftest.py  test_auto_validator.py  test_data_validation.py  test_feature_importance.py  test_unknown_class.py
06_Presentation/: poster.html
07_References/: EDGE_IMPULSE_ANALYSIS.md  EDGE_IMPULSE_QUICKSTART.md  README.md  REFERENCES.md
Smart Wearables Project Work/: Working diary.docx
src/: main.cpp  main.ino
(+32 files in other folders)
