[project]
name = "smart-socks"
version = "1.0.0"
description = "Smart Socks for Physical Activity Recognition - ELEC-E7840 Smart Wearables"
authors = [
    {name = "Saara, Alex, Jing", email = "team@smart-socks.local"}
]
readme = "../../README.md"
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Data handling
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    
    # Machine learning
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    
    # Visualization
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    
    # Serial communication with ESP32
    "pyserial>=3.5",
    
    # Signal processing
    "scipy>=1.7.0",
    
    # Progress bars
    "tqdm>=4.62.0",
    
    # Model management and tables
    "tabulate>=0.8.0",
    
    # Bluetooth Low Energy support
    "bleak>=0.19.0",
    
    # Video recording (for demo)
    "imageio>=2.25.0",
    "imageio-ffmpeg>=0.4.8",
    "Pillow>=9.0.0",
    
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

[project.urls]
Homepage = "https://github.com/powerpig99/smart-socks"
Repository = "https://github.com/powerpig99/smart-socks"
Documentation = "https://github.com/powerpig99/smart-socks/blob/main/README.md"

[tool.uv]
# UV configuration

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
